--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node index.js",
+    "start": "node index.js",
     "start-dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "firebase-admin": "^11.2.1",
+    "mongoose": "^6.7.2",
     "nodemon": "^2.0.20"
   }
 }
